Web Inspector: Inspecting an element inside an iframe no longer works https://bugs.webkit.org/show_bug.cgi?id=76808

Reviewed by Timothy Hatcher.

Source/WebCore:

Test: http/tests/inspector/inspect-element.html

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::innerParentNode):
* inspector/front-end/DOMAgent.js:
(WebInspector.DOMNode.prototype.getChildNodes.mycallback):
(WebInspector.DOMNode.prototype.getChildNodes):
(WebInspector.DOMNode.prototype._setChildrenPayload):
* inspector/front-end/ElementsTreeOutline.js:
(WebInspector.ElementsTreeOutline.prototype._selectedNodeChanged):

LayoutTests:

* http/tests/inspector/inspect-element-expected.txt: Added.
* http/tests/inspector/inspect-element.html: Added.
* http/tests/inspector/resources/inspect-element-iframe.html: Added.

Canonical link: https://commits.webkit.org/93654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105620 268f45cc-cd09-0410-ab3c-d52691b4dbfc